# ai-notify

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  justfile  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml
src/ai_notify/: __init__.py  claude_hooks.py  cli.py  codex_config.py  config.py  config_loader.py  database.py  integrations.py  notifier.py  utils.py
src/ai_notify/events/: __init__.py  ask_user_question.py  codex.py  notification.py  permission_request.py  stop.py  user_prompt_submit.py
src/ai_notify/helpers/: __init__.py  cleanup.py  filters.py
tests/: test_claude_hooks.py  test_cli.py  test_codex_config.py  test_codex_notify.py  test_config.py  test_database.py  test_filters.py  test_notification_modes.py  test_notifier.py  test_utils.py  test_workflows.py
