[build-system]
  build-backend = "hatchling.build"
  requires = ["hatchling"]

[project]
  authors = [{ name = "Paul Razvan Berg" }]
  dependencies = [
    "click>=8.1",
    "loguru>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "tabulate>=0.9",
  ]
  description = "Desktop notification system for Claude Code"
  name = "ai-notify"
  readme = "README.md"
  requires-python = ">=3.12"
  version = "1.0.0"

[project.optional-dependencies]
  dev = ["pyright>=1.1", "pytest>=8.0", "pytest-mock>=3.0", "ruff>=0.8"]

[project.scripts]
  ai-notify = "ai_notify.cli:cli"

[tool.hatch.build.targets.wheel]
  packages = ["src/ai_notify"]

[tool.hatch.build.targets.wheel.force-include]
  "src/ai_notify/assets" = "ai_notify/assets"
